--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,7 +43,7 @@ jobs:
               uses: goreleaser/goreleaser-action@v6
               with:
                   args: release --clean
-                  version: 2
+                  version: "~> v2"
               env:
                   GPG_FINGERPRINT: ${{ steps.import_gpg.outputs.fingerprint }}
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
