--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,6 +9,8 @@
 # You will need to pass the `--batch` flag to `gpg` in your signing step
 # in `goreleaser` to indicate this is being used in a non-interactive mode.
 #
+version: 2
+
 name: Release
 on:
     workflow_dispatch:
@@ -43,7 +45,6 @@ jobs:
               uses: goreleaser/goreleaser-action@v6
               with:
                   args: release --clean
-                  version: "~> v2"
               env:
                   GPG_FINGERPRINT: ${{ steps.import_gpg.outputs.fingerprint }}
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
