--- a/.github/workflows/.goreleaser.yaml
+++ b/.github/workflows/.goreleaser.yaml
@@ -10,42 +10,37 @@
 # in `goreleaser` to indicate this is being used in a non-interactive mode.
 #
 
-version: 2
+name: goreleaser
 
-name: Release
 on:
-    workflow_dispatch:
+  pull_request:
+  push:
 
 permissions:
-    contents: write
+  contents: write
 
 jobs:
-    goreleaser:
-        runs-on: ubuntu-latest
-        steps:
-            - name: Checkout
-              uses: actions/checkout@v3
-              with:
-                  # Allow goreleaser to acce`ss older tag information.
-                  fetch-depth: 0
-
-            - name: Set up Go
-              uses: actions/setup-go@v4
-              with:
-                  cache: true
-                  go-version-file: "go.mod"
-
-            - name: Import GPG key
-              id: import_gpg
-              uses: crazy-max/ghaction-import-gpg@v5
-              with:
-                  gpg_private_key: ${{ secrets.GPG_PRIVATE_KEY }}
-                  passphrase: ${{ secrets.PASSPHRASE }}
-
-            - name: Run GoReleaser
-              uses: goreleaser/goreleaser-action@v6
-              with:
-                  args: release --clean
-              env:
-                  GPG_FINGERPRINT: ${{ steps.import_gpg.outputs.fingerprint }}
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  goreleaser:
+    runs-on: ubuntu-latest
+    steps:
+      -
+        name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      -
+        name: Set up Go
+        uses: actions/setup-go@v5
+      -
+        name: Run GoReleaser
+        uses: goreleaser/goreleaser-action@v6
+        with:
+          # either 'goreleaser' (default) or 'goreleaser-pro'
+          distribution: goreleaser
+          # 'latest', 'nightly', or a semver
+          version: '~> v2'
+          args: release --clean
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          # Your GoReleaser Pro key, if you are using the 'goreleaser-pro' distribution
+          # GORELEASER_KEY: ${{ secrets.GORELEASER_KEY }}
