--- a/.github/workflows/.goreleaser.yaml
+++ b/.github/workflows/.goreleaser.yaml
@@ -33,10 +33,10 @@ jobs:
         uses: actions/setup-go@v5
       -
         name: Run GoReleaser
-        uses: goreleaser/goreleaser-action@v2.0.0
+        uses: goreleaser/goreleaser-action@v6.0.0
         with:
           version: latest
-          args: release
+          args: release --clean
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           # Your GoReleaser Pro key, if you are using the 'goreleaser-pro' distribution
