--- a/.github/workflows/.goreleaser.yaml
+++ b/.github/workflows/.goreleaser.yaml
@@ -46,7 +46,7 @@ jobs:
               with:
                 distribution: goreleaser
                 version: latest
-                args: release --clean
+                args: release --snapshot --clean
               env:
                 GPG_FINGERPRINT: ${{ steps.import_gpg.outputs.fingerprint }}
                 GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
