--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -35,14 +35,16 @@ jobs:
                   cache: true
                   go-version-file: "go.mod"
 
+            - name: Set Env Variable GPG_TTY
+              run: export GPG_TTY=$(tty)
+
             - name: Import GPG key
               id: import_gpg
               uses: crazy-max/ghaction-import-gpg@v5
               with:
                   gpg_private_key: ${{ secrets.GPG_PRIVATE_KEY }}
                   passphrase: ${{ secrets.PASSPHRASE }}
-            - name: Create annotation for build error
-              run: export GPG_TTY=$(tty)
+              
             - name: Run GoReleaser
               uses: goreleaser/goreleaser-action@v5
               with:
