--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -46,6 +46,10 @@ signs:
           - "--batch"
           - "--local-user"
           - "{{ .Env.GPG_FINGERPRINT }}" # set this environment variable for your signing key
+          - "--passphrase"
+          - "{{ secrets.PASSPHRASE }}"
+          - "--pinentry-mode"
+          - "loopback"
           - "--output"
           - "${signature}"
           - "--detach-sign"
