--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -49,7 +49,7 @@ jobs:
               uses: goreleaser/goreleaser-action@v5
               with:
                 distribution: goreleaser
-                version: latest
+                version: "v1.25.1"
                 args: release --snapshot --clean
               env:
                 GPG_FINGERPRINT: ${{ steps.import_gpg.outputs.fingerprint }}
